[package]
name = "solana_mev_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
solana-program = "1.17"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
telegram-bot-api = "0.1"
chrono = "0.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"  # Thread-safe HashMap
spl-token = "4.0"
base64 = "0.21"
solana-account-decoder = "1.17"